name:                ln-ui-cli
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/ln-ui-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.UI.Cli
                     , LN.UI.Cli.Main
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , transformers
                     , haskell-ln-types
                     , haskell-api-helpers
                     , haskell-api-helpers-shared
  default-language:    Haskell2010
  ghc-options:         -j -Wall

executable ln-ui-cli-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ln-ui-cli
  default-language:    Haskell2010

test-suite ln-ui-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ln-ui-cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/ln-ui-cli
